# map-metrics

./: CMakeLists.txt  pyproject.toml  setup.cfg  setup.py
cpp/: CMakeLists.txt  clustering.cpp  clustering.h  config.h  max_clique.cpp  max_clique.h  metrics.cpp  metrics.h  metrics_utils.cpp  metrics_utils.h  orth_extract.cpp  orth_extract.h
cpp/map_metrics/: CMakeLists.txt
cpp/map_metrics/include/: metrics.h
cpp/map_metrics/include/map_metrics/: config.h  map_tree.h  metric_estimator.h  metrics.h  orthogonal.h
cpp/map_metrics/include/map_metrics/utils/: cloud_utils.h  map_utils.h
cpp/map_metrics/src/map_metrics/: cluster_means.cpp  cluster_means.h  clustering.cpp  clustering.h  config.cpp  map_tree.cpp  max_clique.cpp  max_clique.h  max_clique_visitor.cpp  max_clique_visitor.h  metric_estimator.cpp  metrics.cpp  metrics_core.cpp  metrics_core.h  orthogonal.cpp  point_statistics.cpp  point_statistics.h
cpp/map_metrics/src/map_metrics/core/: point_statistics.cpp
cpp/map_metrics/src/map_metrics/utils/: cloud_utils.cpp  kdtree_utils.cpp  kdtree_utils.h  map_utils.cpp  max_clique_visitor.cpp  max_clique_visitor.h  point_statistics.cpp  point_statistics.h
cpp/pybind/: CMakeLists.txt  config.cpp  config.h  map_metrics_pybind.cpp  map_tree.cpp  map_tree.h  metrics.cpp  metrics.h
cpp/pybind/utils/: cloud_utils.cpp  cloud_utils.h
cpp/tests/: CMakeLists.txt  test_base_metrics.cpp  test_depth.cpp  test_depth_new.cpp  test_orthogonal.cpp  test_orthogonal_new.cpp
data/rgbd/points/: PC-0071.csv  PC-0081.csv  PC-0091.csv  PC-0101.csv  PC-0111.csv  PC-0121.csv  PC-0131.csv  PC-0141.csv  PC-0151.csv  PC-0161.csv  PC-0171.csv  PC-0181.csv  PC-0191.csv  PC-0201.csv  PC-0211.csv  PC-0221.csv  PC-0231.csv  PC-0241.csv  PC-0251.csv  PC-0261.csv  PC-0271.csv  PC-0281.csv  PC-0291.csv  PC-0301.csv  PC-0311.csv  PC-0321.csv  PC-0331.csv  PC-0341.csv
examples/: CMakeLists.txt  metric_estimation.cpp
scripts/: build-wheels-linux.sh  build-wheels-macOS.sh  build-wheels-windows.cmd
