[metadata]
name = map_metrics
home-page = https://github.com/MobileRoboticsSkoltech/map-metrics
maintainer = Anastasiia Kornilova
maintainer_email = anastasiia.kornilova@skoltech.ru
long-description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
packages = find:

[options.package_data]
* =
    *.so
    *.dylib
    *.dll
    *.pyd

[sdist]
formats = zip, gztar
